Fix carousel overflow hidden, fix sticky-nav and navbar-list:active to position fixed, fix burger icon z-index 2

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -3,7 +3,7 @@
 
 .carousel{
   position: relative;
-  // overflow: hidden;
+  overflow: hidden;
   display: none;
 }
 
