--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -114,6 +114,7 @@ li > a{
   cursor: pointer;
   width: 40px;
   height: 30px;
+  z-index: 2;
 }
 
 .burger-icon > span{
@@ -152,7 +153,7 @@ li > a{
 }
 
 .static-nav{
-  position: static;
+  position: fixed;
 }
 
 // MEDIA QUERIES
@@ -181,7 +182,7 @@ li > a{
 
   .navbar-list.active{
     display: block;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     width: 100%;
